--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -5,6 +5,6 @@
 <% @artists.each do |artist| %>
   <div class="artist">
     <img src="<%= artist.image_url %>" alt=""> <br>
-    <h3><a href="/artists/<%= artist.id %>"><%= artist.first_name %> <%= artist.last_name %></a></h3>
+    <h3><%= link_to_artist_show(artist)%></h3>
   </div>
 <% end %>
