--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -8,7 +8,7 @@
     <% category.artists.each do |artist| %>
       <div class="artist">
         <img src="<%= artist.image_url %>" alt=""> <br>
-        <h3><a href="/artists/<%= artist.id %>"><%= artist.first_name %> <%= artist.last_name %></a></h3>
+        <h3><%= link_to_artist_show(artist) %></a></h3>
       </div>
     <% end %>
   </div>
