--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -1,15 +1,15 @@
 <div class="jumbotron">
+  <%= link_to_home %>
+
   <h1>Categories</h1>
+
 </div>
 
 <% @categories.each do |category| %>
   <h2><%= category.name %></h2>
   <div class="clearfix">
     <% category.artists.each do |artist| %>
-      <div class="artist">
-        <img src="<%= artist.image_url %>" alt=""> <br>
-        <h3><%= link_to_artist_show(artist) %></a></h3>
-      </div>
+      <%= artist_div(artist) %>
     <% end %>
   </div>
 <% end %>
