--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -1,10 +1,8 @@
 <div class="jumbotron">
+  <%= link_to_home %>
   <h1>Martial Artists</h1>
 </div>
 
 <% @artists.each do |artist| %>
-  <div class="artist">
-    <img src="<%= artist.image_url %>" alt=""> <br>
-    <h3><%= link_to_artist_show(artist)%></h3>
-  </div>
+  <%= artist_div(artist) %>
 <% end %>
